apps/core/django/stderr.log
Not Found: /p2/
Not Found: /
Not Found: /favicon.ico
Not Found: /api/
Unauthorized: /api/user-profile/
Not Found: /
Not Found: /
Bad Request: /api/register/
Not Found: /api/
Not Found: /
Not Found: /
Not Found: /favicon.ico
Not Found: /static/admin/css/base.css
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/css/login.css
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/base.css
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/css/dashboard.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/base.css
Not Found: /static/admin/js/jquery.init.js
Not Found: /static/admin/css/changelists.css
Not Found: /static/admin/js/vendor/jquery/jquery.js
Not Found: /static/admin/js/core.js
Not Found: /static/admin/js/admin/RelatedObjectLookups.js
Not Found: /static/admin/js/actions.js
Not Found: /static/admin/js/urlify.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/vendor/xregexp/xregexp.js
Not Found: /static/admin/js/prepopulate.js
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/js/filters.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/css/base.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/js/core.js
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/js/jquery.init.js
Not Found: /static/admin/js/vendor/jquery/jquery.js
Not Found: /static/admin/js/actions.js
Not Found: /static/admin/js/urlify.js
Not Found: /static/admin/js/prepopulate.js
Not Found: /static/admin/js/vendor/xregexp/xregexp.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/css/forms.css
Not Found: /static/admin/js/admin/RelatedObjectLookups.js
Not Found: /static/admin/js/prepopulate_init.js
Not Found: /static/admin/img/icon-changelink.svg
Not Found: /static/admin/img/icon-viewlink.svg
Not Found: /static/admin/img/icon-addlink.svg
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/change_form.js
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /favicon.ico
Internal Server Error: /accounts/login/
Traceback (most recent call last):
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/defaulttags.py", line 1026, in find_library
    return parser.libraries[name]
           ~~~~~~~~~~~~~~~~^^^^^^
KeyError: 'socialaccount'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/core/handlers/base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/backends/django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 513, in parse
    raise self.error(token, e)
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 513, in parse
    raise self.error(token, e)
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/defaulttags.py", line 1088, in load
    lib = find_library(parser, name)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/arifahub/virtualenv/p2/3.11/lib/python3.11/site-packages/django/template/defaulttags.py", line 1028, in find_library
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: 'socialaccount' is not a registered tag library. Must be one of:
account
admin_list
admin_modify
admin_urls
cache
i18n
l10n
log
rest_framework
static
tz
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /
Not Found: /favicon.ico
Not Found: /
Not Found: /
Not Found: /favicon.ico
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/css/login.css
Not Found: /static/admin/css/base.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/css/base.css
Not Found: /static/admin/css/dashboard.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/css/base.css
Not Found: /static/admin/css/dark_mode.css
Not Found: /static/admin/css/nav_sidebar.css
Not Found: /static/admin/css/changelists.css
Not Found: /static/admin/js/vendor/jquery/jquery.js
Not Found: /static/admin/js/core.js
Not Found: /static/admin/js/admin/RelatedObjectLookups.js
Not Found: /static/admin/js/actions.js
Not Found: /static/admin/css/responsive.css
Not Found: /static/admin/js/jquery.init.js
Not Found: /static/admin/js/urlify.js
Not Found: /static/admin/js/prepopulate.js
Not Found: /static/admin/js/vendor/xregexp/xregexp.js
Not Found: /static/admin/js/nav_sidebar.js
Not Found: /static/admin/js/filters.js
Not Found: /static/admin/js/theme.js
Not Found: /static/admin/css/responsive.css
